ui-issue: Fix the 'logo' alignment on larger breakpoints

--- a/css/app.sass
+++ b/css/app.sass
@@ -57,6 +57,7 @@ header
     @media all and (min-width: 670px)
       .logo
         width: 20%
+        text-align: left
       .menu-links
         width: 80%
         text-align: right
